--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.5.17"
+tokio = {version = "1.18.2", features = ["full"]}
+serde = {version = "1.0.147", features = ["derive"]}
