--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-graphql = "4.0.16"
+async-graphql-axum = "4.0.16"
 axum = "0.5.17"
 tokio = {version = "1.18.2", features = ["full"]}
 serde = {version = "1.0.147", features = ["derive"]}
