--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 async-graphql = "4.0.16"
 async-graphql-axum = "4.0.16"
 axum = "0.5.17"
+metrics = "0.20.1"
+metrics-exporter-prometheus = "0.11.0"
 tokio = {version = "1.18.2", features = ["full"]}
 serde = {version = "1.0.147", features = ["derive"]}
